--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Сайт тестовый</title>
-    <link rel="stylesheet" href="C:\Users\gavri\Desktop\ДЗ 4\css\style.css">
+    <link rel="stylesheet" href="/Task4/css/style.css">
     <style>#main-aside-wrapper {
       flex-direction: row;
       display: flex;
