--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Сайт тестовый</title>
-    <link rel="stylesheet" href="/Task4/css/style.css">
-    <style>#main-aside-wrapper {
-      flex-direction: row;
-      display: flex;
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js">
+    </script>
+    <link rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
+    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="C:\Users\gavri\Desktop\ДЗ 4\css\style.css">
+    <style>
+    
+    #main-aside-wrapper {
+      flex-direction: flex;
+      display: column;
     }
     #main-aside-wrapper main, #main-aside-wrapper aside {
       background-color: #ddd;
