--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="C:\Users\gavri\Desktop\ДЗ 4\css\style.css">
+    <link rel="stylesheet" href="/Task 4/css/style.css">
     <style>
     
     #main-aside-wrapper {
