--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/Task4/css/style.css">
+    <link rel="stylesheet" href="C:\Users\gavri\Desktop\НИКИТА\ДЗ 4\css\style.css">
     <style>
     
     #main-aside-wrapper {
@@ -33,6 +33,7 @@
       flex: 3;
       order: 2;
     }
+    
     @media screen and (min-width: 800px) {
     #main-aside-wrapper {
     flex-direction: row;
@@ -53,7 +54,7 @@
     <header class="header">
         <div style="width:960px; padding: 10px; height:120px; margin: 0 auto;">
           <span class="circle-image">
-              <img style="float:left; margin-left:-5px; margin-top:-5px; width:100px; height:100px;" src="image.png" alt="">
+              <img style="float:left; margin-left:-5%; margin-top:-5%; width:100px; height:100px;" src="image.png" alt="">
            </span>
 
             <div style=" padding:50px; margin-top:-100px; margin-left: -120px; font-size:35px">Сайт Тестовый</div>
@@ -180,27 +181,15 @@
             <label>
             Дата рождения:<br>
             <input name="field-date" value="2004-12-02" type="date">
-         </label><br>Любимый язак программирования:<br>
-         <label>
-             <input type="radio" name="radio-group-1" value="C++">
-             C++
          </label>
-         <label>
-             <input type="radio" name="radio-group-1" value="Java">
-             Java
-         </label>
-         <label>
-             <input type="radio" name="radio-group-1" value="Python">
-             Python
-         </label>
-         <label>
-             <input type="radio"  name="radio-group-1" value="Pascal">
-             Pascal
-         </label>
-         <label>
-           <input type="radio" checked="checked" name="radio-group-1" value="Scala">
-           Scala
-       </label>
+         <br><b>Любимый язык программирования:</b><br>
+         <p><select multiple>
+          <option disabled>Выберите любимый язык программирования</option>
+          <option value="C++">C++</option>
+          <option selected value="Java">Java</option>
+          <option value="Python">Python</option>
+          <option value="Pascal">Pascal</option>
+         </select></p>
          <br>
               Пол:<br>
               <label>
